<resources>
    <string name="app_name">Stopwatch</string>
    <string name="timer_default">00:00:00</string>
    <string name="btn_reset">Quit</string>
    <string name="btn_start">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_lap">Lap</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="lap_format">Lap %1$d ➔ %2$s</string>
    <string name="splash_subtitle">Precision in every second</string>
</resources>